--- a/apps.html
+++ b/apps.html
@@ -7,7 +7,7 @@
   <title>Apps</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?417434784"/>
-  <link rel="stylesheet" type="text/css" href="css/apps.css?377738004" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/apps.css?3939255405" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -23,13 +23,21 @@
    <div class="verticalspacer"></div>
    <ul class="MenuBar clearfix grpelem" id="menuu1319"><!-- horizontal box -->
     <li class="MenuItemContainer clearfix grpelem" id="u1348"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1349" href="home.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1350-4"><!-- content --><p>Home</p></div></a>
+     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1349"><!-- horizontal box -->
+      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1350-4"><!-- content -->
+       <p>Home</p>
+      </div>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix grpelem" id="u1327"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1328" href="services.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1329-4"><!-- content --><p>services</p></div></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1328" href="home.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1329-4"><!-- content --><p>services</p></div></a>
     </li>
     <li class="MenuItemContainer clearfix grpelem" id="u1334"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1335" href="support-contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1337-4"><!-- content --><p>support</p></div></a>
+     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1335"><!-- horizontal box -->
+      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1337-4"><!-- content -->
+       <p>support</p>
+      </div>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix grpelem" id="u1341"><!-- vertical box -->
      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1342"><!-- horizontal box -->
@@ -39,7 +47,11 @@
      </div>
     </li>
     <li class="MenuItemContainer clearfix grpelem" id="u1320"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1321" href="support-contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1322-4"><!-- content --><p>contact</p></div></a>
+     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1321"><!-- horizontal box -->
+      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1322-4"><!-- content -->
+       <p>contact</p>
+      </div>
+     </div>
     </li>
    </ul>
   </div>
