--- a/diy-kits.html
+++ b/diy-kits.html
@@ -7,7 +7,7 @@
   <title>DIY Kits</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?417434784"/>
-  <link rel="stylesheet" type="text/css" href="css/diy-kits.css?425020105" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/diy-kits.css?3870385867" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -23,13 +23,21 @@
    <div class="verticalspacer"></div>
    <ul class="MenuBar clearfix grpelem" id="menuu1272"><!-- horizontal box -->
     <li class="MenuItemContainer clearfix grpelem" id="u1301"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1302" href="home.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1303-4"><!-- content --><p>Home</p></div></a>
+     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1302"><!-- horizontal box -->
+      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1303-4"><!-- content -->
+       <p>Home</p>
+      </div>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix grpelem" id="u1280"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1281" href="services.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1282-4"><!-- content --><p>services</p></div></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1281" href="home.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1282-4"><!-- content --><p>services</p></div></a>
     </li>
     <li class="MenuItemContainer clearfix grpelem" id="u1287"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1288" href="support-contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1290-4"><!-- content --><p>support</p></div></a>
+     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1288"><!-- horizontal box -->
+      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1290-4"><!-- content -->
+       <p>support</p>
+      </div>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix grpelem" id="u1294"><!-- vertical box -->
      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1295"><!-- horizontal box -->
@@ -39,7 +47,11 @@
      </div>
     </li>
     <li class="MenuItemContainer clearfix grpelem" id="u1273"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1274" href="support-contact.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1275-4"><!-- content --><p>contact</p></div></a>
+     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1274"><!-- horizontal box -->
+      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1275-4"><!-- content -->
+       <p>contact</p>
+      </div>
+     </div>
     </li>
    </ul>
   </div>
