--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
   <title>projects</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?417434784"/>
-  <link rel="stylesheet" type="text/css" href="css/projects.css?518991402" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/projects.css?4290327857" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -22,7 +22,7 @@
     <div class="rounded-corners shadow pinned-colelem" id="u1543"><!-- simple frame -->
      <div class="_u1543 f3s_top" id="_u1543-f3s_top"></div>
     </div>
-    <img class="pinned-colelem" id="u1603-4" src="images/u1603-4.png" alt="Adinovus" width="158" height="43"/><!-- rasterized frame -->
+    <img class="pinned-colelem" id="u1620-4" src="images/u1620-4.png" alt="Adinovus" width="233" height="58"/><!-- rasterized frame -->
     <ul class="MenuBar clearfix pinned-colelem" id="menuu1468"><!-- horizontal box -->
      <li class="MenuItemContainer clearfix grpelem" id="u1483"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1484" href="home.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1486-4"><!-- content --><p>HOME</p></div></a>
@@ -32,16 +32,16 @@
       <div class="SubMenu  MenuLevel1 clearfix" id="u1498"><!-- vertical box -->
        <ul class="SubMenuView rounded-corners clearfix colelem" id="u1499"><!-- vertical box -->
         <li class="MenuItemContainer clearfix colelem" id="u1547"><!-- horizontal box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive grpelem" id="u1548" href="projects.html"><!-- horizontal box --><div class="_u1548 f3s_top clearfix" id="_u1548-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1550-4"><!-- content --><p>Electronics Projects</p></div></div></a>
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive grpelem" id="u1548" href="projects.html"><!-- horizontal box --><div class="_u1548 f3s_top" id="_u1548-f3s_top"></div><div class="_u1548 f3s_mid clearfix" id="_u1548-f3s_mid"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1550-4"><!-- content --><p>Electronics Projects</p></div></div><div class="_u1548 f3s_bot" id="_u1548-f3s_bot"></div></a>
         </li>
         <li class="MenuItemContainer clearfix colelem" id="u1571"><!-- horizontal box -->
          <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1572"><!-- group -->
-          <a class="nonblock nontext grpelem" id="u1572" href="diy-kits.html"><!-- horizontal box --><div class="_u1572 f3s_top clearfix" id="_u1572-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1574-4"><!-- content --><p>Do It Yourself Kits</p></div></div></a>
+          <a class="nonblock nontext grpelem" id="u1572" href="diy-kits.html"><!-- horizontal box --><div class="_u1572 f3s_top" id="_u1572-f3s_top"></div><div class="_u1572 f3s_mid clearfix" id="_u1572-f3s_mid"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1574-4"><!-- content --><p>Do It Yourself Kits</p></div></div><div class="_u1572 f3s_bot" id="_u1572-f3s_bot"></div></a>
          </div>
         </li>
         <li class="MenuItemContainer clearfix colelem" id="u1564"><!-- horizontal box -->
          <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1565"><!-- group -->
-          <a class="nonblock nontext grpelem" id="u1565" href="apps.html"><!-- horizontal box --><div class="_u1565 f3s_top clearfix" id="_u1565-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1567-4"><!-- content --><p>Mobile Apps</p></div></div></a>
+          <a class="nonblock nontext grpelem" id="u1565" href="apps.html"><!-- horizontal box --><div class="_u1565 f3s_top" id="_u1565-f3s_top"></div><div class="_u1565 f3s_mid clearfix" id="_u1565-f3s_mid"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1567-4"><!-- content --><p>Mobile Apps</p></div></div><div class="_u1565 f3s_bot" id="_u1565-f3s_bot"></div></a>
          </div>
         </li>
        </ul>
@@ -63,7 +63,7 @@
         </li>
         <li class="MenuItemContainer clearfix colelem" id="u1588"><!-- horizontal box -->
          <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1589"><!-- group -->
-          <a class="nonblock nontext grpelem" id="u1589" href="docs.html"><!-- horizontal box --><div class="_u1589 f3s_top clearfix" id="_u1589-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1592-4"><!-- content --><p>Docs</p></div></div></a>
+          <a class="nonblock nontext grpelem" id="u1589" href="docs.html"><!-- horizontal box --><div class="_u1589 f3s_top" id="_u1589-f3s_top"></div><div class="_u1589 f3s_mid clearfix" id="_u1589-f3s_mid"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1592-4"><!-- content --><p>Docs</p></div></div><div class="_u1589 f3s_bot" id="_u1589-f3s_bot"></div></a>
          </div>
         </li>
        </ul>
@@ -226,11 +226,11 @@
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1548-a-full.png" alt=""/>
-   <img class="preload" src="images/u1572-r-full.png" alt=""/>
-   <img class="preload" src="images/u1565-r-full.png" alt=""/>
+   <img class="preload" src="images/u1548-a-sprite.png" alt=""/>
+   <img class="preload" src="images/u1572-r-sprite.png" alt=""/>
+   <img class="preload" src="images/u1565-r-sprite.png" alt=""/>
    <img class="preload" src="images/u1579-r-sprite.png" alt=""/>
-   <img class="preload" src="images/u1589-r-full.png" alt=""/>
+   <img class="preload" src="images/u1589-r-sprite.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
