--- a/dsp.html
+++ b/dsp.html
@@ -7,8 +7,8 @@
   <title>DSP</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?417434784"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?3800358467"/>
-  <link rel="stylesheet" type="text/css" href="css/dsp.css?3888162665" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?62626648"/>
+  <link rel="stylesheet" type="text/css" href="css/dsp.css?374803705" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -91,48 +91,76 @@
    </ul>
    <ul class="MenuBar clearfix pinned-colelem" id="menuu1761"><!-- vertical box -->
     <li class="MenuItemContainer clearfix colelem" id="u1776"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1779" href="robotics.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1780-4"><!-- content --><p>Robotics</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1779"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1779" href="robotics.html"><!-- horizontal box --><div class="_u1779 f3s_top clearfix" id="_u1779-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1780-4"><!-- content --><p>Robotics</p></div></div></a>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1762"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1763" href="communication.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1766-4"><!-- content --><p>Communication</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1763"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1763" href="communication.html"><!-- horizontal box --><div class="_u1763 f3s_top clearfix" id="_u1763-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1766-4"><!-- content --><p>Communication</p></div></div></a>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1790"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u1793" href="dsp.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1796-4"><!-- content --><p>Matlab</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="pu1793"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1793" href="dsp.html"><!-- horizontal box --><div class="_u1793 f3s_top clearfix" id="_u1793-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1796-4"><!-- content --><p>Matlab</p></div></div></a>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1783"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1786" href="automotive.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1787-4"><!-- content --><p>Automotive</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1786"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1786" href="automotive.html"><!-- horizontal box --><div class="_u1786 f3s_top clearfix" id="_u1786-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1787-4"><!-- content --><p>Automotive</p></div></div></a>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1769"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1770" href="wireless.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1771-4"><!-- content --><p>Wireless</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1770"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1770" href="wireless.html"><!-- horizontal box --><div class="_u1770 f3s_top clearfix" id="_u1770-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1771-4"><!-- content --><p>Wireless</p></div></div></a>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1804"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1805" href="ieee.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1807-4"><!-- content --><p>IEEE Projects</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1805"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1805" href="ieee.html"><!-- horizontal box --><div class="_u1805 f3s_top clearfix" id="_u1805-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1807-4"><!-- content --><p>IEEE Projects</p></div></div></a>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1797"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1800" href="embedded-system.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1801-4"><!-- content --><p>Embedded system</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1800"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1800" href="embedded-system.html"><!-- horizontal box --><div class="_u1800 f3s_top clearfix" id="_u1800-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1801-4"><!-- content --><p>Embedded system</p></div></div></a>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1934"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1937" href="arduino.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1938-4"><!-- content --><p>Arduino</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1937"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1937" href="arduino.html"><!-- horizontal box --><div class="_u1937 f3s_top clearfix" id="_u1937-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1938-4"><!-- content --><p>Arduino</p></div></div></a>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1927"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1930" href="raspberry-pi.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1931-4"><!-- content --><p>Raspberry pi</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1930"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1930" href="raspberry-pi.html"><!-- horizontal box --><div class="_u1930 f3s_top clearfix" id="_u1930-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1931-4"><!-- content --><p>Raspberry pi</p></div></div></a>
+     </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1920"><!-- horizontal box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1923"><!-- horizontal box -->
-      <div class="MenuItemLabel clearfix grpelem" id="u1924-4"><!-- content -->
-       <p>PIC</p>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1923"><!-- group -->
+      <div class="rounded-corners shadow grpelem" id="u1923"><!-- horizontal box -->
+       <div class="_u1923 f3s_top clearfix" id="_u1923-f3s_top">
+        <div class="MenuItemLabel clearfix grpelem" id="u1924-4"><!-- content -->
+         <p>PIC</p>
+        </div>
+       </div>
       </div>
      </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1941"><!-- horizontal box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1944"><!-- horizontal box -->
-      <div class="MenuItemLabel clearfix grpelem" id="u1947-4"><!-- content -->
-       <p>Sensors</p>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1944"><!-- group -->
+      <div class="rounded-corners shadow grpelem" id="u1944"><!-- horizontal box -->
+       <div class="_u1944 f3s_top clearfix" id="_u1944-f3s_top">
+        <div class="MenuItemLabel clearfix grpelem" id="u1947-4"><!-- content -->
+         <p>Sensors</p>
+        </div>
+       </div>
       </div>
      </div>
     </li>
     <li class="MenuItemContainer clearfix colelem" id="u1976"><!-- horizontal box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1979" href="iot.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u1980-4"><!-- content --><p>IoT</p></div></a>
+     <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu1979"><!-- group -->
+      <a class="nonblock nontext rounded-corners shadow grpelem" id="u1979" href="iot.html"><!-- horizontal box --><div class="_u1979 f3s_top clearfix" id="_u1979-f3s_top"><div class="MenuItemLabel clearfix grpelem" id="u1980-4"><!-- content --><p>IoT</p></div></div></a>
+     </div>
     </li>
    </ul>
    <div class="clearfix colelem" id="u1970-4"><!-- content -->
@@ -159,6 +187,10 @@
    <img class="preload" src="images/u1861-a-sprite.png" alt=""/>
    <img class="preload" src="images/u1847-r-sprite.png" alt=""/>
    <img class="preload" src="images/u1847-a-sprite.png" alt=""/>
+   <img class="preload" src="images/u1779-r-full.png" alt=""/>
+   <img class="preload" src="images/u1779-m-full.png" alt=""/>
+   <img class="preload" src="images/u1937-r-full.png" alt=""/>
+   <img class="preload" src="images/u1937-m-full.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
