more pjcts and vid

--- a/diy-kits.html
+++ b/diy-kits.html
@@ -7,65 +7,231 @@
   <title>DIY Kits</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?417434784"/>
-  <link rel="stylesheet" type="text/css" href="css/diy-kits.css?3870385867" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_c-master.css?4167709433"/>
+  <link rel="stylesheet" type="text/css" href="css/diy-kits.css?4195923018" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
+var __adobewebfontsappname__ = "muse";
 </script>
-    <!--custom head HTML-->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-51787775-1', 'adinovus.com');
-  ga('send', 'pageview');
-
+  <!-- JS includes -->
+  <script type="text/javascript">
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/inconsolata:n5:all;pt-mono:n4:all.js" type="text/javascript">\x3C/script>');
 </script>
-
- </head>
+   </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="u1039-5"><!-- content -->
-    <p id="u1039-2">Sorry, this page is under maintenence</p>
-    <p>&nbsp;</p>
+  <div class="clearfix" id="page"><!-- column -->
+   <div class="position_content" id="page_position_content">
+    <div class="clearfix colelem" id="pu3551"><!-- group -->
+     <div class="grpelem" id="u3551"><!-- simple frame --></div>
+     <div class="grpelem" id="u3552"><!-- group -->
+      <div class="_u3552 f3s_top clearfix" id="_u3552-f3s_top">
+       <div class="clip_frame grpelem" id="u3553"><!-- image -->
+        <img class="block" id="u3553_img" src="images/logo%20final.png" alt="" width="96" height="72"/>
+       </div>
+       <ul class="MenuBar clearfix grpelem" id="menuu3557"><!-- horizontal box -->
+        <li class="MenuItemContainer clearfix grpelem" id="u3606"><!-- vertical box -->
+         <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3609"><!-- group -->
+          <a class="nonblock nontext grpelem" id="u3609" href="home.html"><!-- horizontal box --><div class="_u3609 f3s_top clearfix" id="_u3609-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3610-4"><!-- content --><p>Home</p></div></div></a>
+         </div>
+        </li>
+        <li class="MenuItemContainer clearfix grpelem" id="u3613"><!-- vertical box -->
+         <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3637"><!-- group -->
+          <a class="nonblock nontext grpelem" id="u3637" href="home.html#whatwedo"><!-- horizontal box --><div class="_u3637 f3s_top clearfix" id="_u3637-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3638-4"><!-- content --><p>Services</p></div></div></a>
+         </div>
+         <div class="SubMenu  MenuLevel1 clearfix" id="u3614"><!-- vertical box -->
+          <ul class="SubMenuView clearfix colelem" id="u3615"><!-- vertical box -->
+           <li class="MenuItemContainer clearfix colelem" id="u3630"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3631"><!-- group -->
+             <a class="nonblock nontext shadow grpelem" id="u3631" href="projects.html"><!-- horizontal box --><div class="_u3631 f3s_top clearfix" id="_u3631-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3634-4"><!-- content --><p>Embedded Projects</p></div></div></a>
+            </div>
+           </li>
+           <li class="MenuItemContainer clearfix colelem" id="u3616"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="pu3619"><!-- group -->
+             <a class="nonblock nontext shadow grpelem" id="u3619" href="diy-kits.html"><!-- horizontal box --><div class="_u3619 f3s_top clearfix" id="_u3619-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3622-4"><!-- content --><p>Do It Yourself Kits</p></div></div></a>
+            </div>
+           </li>
+           <li class="MenuItemContainer clearfix colelem" id="u3623"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3624"><!-- group -->
+             <a class="nonblock nontext shadow grpelem" id="u3624" href="apps.html"><!-- horizontal box --><div class="_u3624 f3s_top clearfix" id="_u3624-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3625-4"><!-- content --><p>Apps</p></div></div></a>
+            </div>
+           </li>
+          </ul>
+         </div>
+        </li>
+        <li class="MenuItemContainer clearfix grpelem" id="u3558"><!-- vertical box -->
+         <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3559"><!-- group -->
+          <a class="nonblock nontext grpelem" id="u3559" href="home.html#support"><!-- horizontal box --><div class="_u3559 f3s_top clearfix" id="_u3559-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3560-4"><!-- content --><p>Support</p></div></div></a>
+         </div>
+         <div class="SubMenu  MenuLevel1 clearfix" id="u3563"><!-- vertical box -->
+          <ul class="SubMenuView clearfix colelem" id="u3564"><!-- vertical box -->
+           <li class="MenuItemContainer clearfix colelem" id="u3565"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3568"><!-- group -->
+             <a class="nonblock nontext grpelem" id="u3568" href="videos.html"><!-- horizontal box --><div class="_u3568 f3s_top clearfix" id="_u3568-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3569-4"><!-- content --><p>Videos</p></div></div></a>
+            </div>
+           </li>
+           <li class="MenuItemContainer clearfix colelem" id="u3572"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3573"><!-- group -->
+             <a class="nonblock nontext grpelem" id="u3573" href="training.html"><!-- horizontal box --><div class="_u3573 f3s_top clearfix" id="_u3573-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3575-4"><!-- content --><p>Training</p></div></div></a>
+            </div>
+           </li>
+           <li class="MenuItemContainer clearfix colelem" id="u3579"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3582"><!-- group -->
+             <a class="nonblock nontext grpelem" id="u3582" href="docs.html"><!-- horizontal box --><div class="_u3582 f3s_top clearfix" id="_u3582-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3585-4"><!-- content --><p>Docs</p></div></div></a>
+            </div>
+           </li>
+          </ul>
+         </div>
+        </li>
+        <li class="MenuItemContainer clearfix grpelem" id="u3586"><!-- vertical box -->
+         <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3589"><!-- group -->
+          <a class="nonblock nontext grpelem" id="u3589" href="home.html#contact"><!-- horizontal box --><div class="_u3589 f3s_top clearfix" id="_u3589-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3591-4"><!-- content --><p>Contact Us</p></div></div></a>
+         </div>
+        </li>
+       </ul>
+      </div>
+     </div>
+     <div class="clip_frame grpelem" id="u3555"><!-- image -->
+      <img class="block" id="u3555_img" src="images/name%20blue.png" alt="" width="320" height="88"/>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pmenuu2554"><!-- group -->
+     <ul class="MenuBar clearfix grpelem" id="menuu2554"><!-- vertical box -->
+      <li class="MenuItemContainer clearfix colelem" id="u2595"><!-- horizontal box -->
+       <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu2596"><!-- group -->
+        <div class="rounded-corners shadow grpelem" id="u2596"><!-- horizontal box -->
+         <div class="_u2596 f3s_top clearfix" id="_u2596-f3s_top">
+          <div class="MenuItemLabel clearfix grpelem" id="u2598-4"><!-- content -->
+           <p>Training kits</p>
+          </div>
+         </div>
+        </div>
+       </div>
+      </li>
+      <li class="MenuItemContainer clearfix colelem" id="u2623"><!-- horizontal box -->
+       <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu2626"><!-- group -->
+        <div class="rounded-corners shadow grpelem" id="u2626"><!-- horizontal box -->
+         <div class="_u2626 f3s_top clearfix" id="_u2626-f3s_top">
+          <div class="MenuItemLabel clearfix grpelem" id="u2628-4"><!-- content -->
+           <p>programmers</p>
+          </div>
+         </div>
+        </div>
+       </div>
+      </li>
+      <li class="MenuItemContainer clearfix colelem" id="u2616"><!-- horizontal box -->
+       <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu2619"><!-- group -->
+        <div class="rounded-corners shadow grpelem" id="u2619"><!-- horizontal box -->
+         <div class="_u2619 f3s_top clearfix" id="_u2619-f3s_top">
+          <div class="MenuItemLabel clearfix grpelem" id="u2621-4"><!-- content -->
+           <p>Robotic kits</p>
+          </div>
+         </div>
+        </div>
+       </div>
+      </li>
+      <li class="MenuItemContainer clearfix colelem" id="u2609"><!-- horizontal box -->
+       <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu2612"><!-- group -->
+        <div class="rounded-corners shadow grpelem" id="u2612"><!-- horizontal box -->
+         <div class="_u2612 f3s_top clearfix" id="_u2612-f3s_top">
+          <div class="MenuItemLabel clearfix grpelem" id="u2614-4"><!-- content -->
+           <p>sensor modules</p>
+          </div>
+         </div>
+        </div>
+       </div>
+       <div class="SubMenu  MenuLevel1 clearfix" id="u2610"><!-- vertical box -->
+        <ul class="SubMenuView clearfix colelem" id="u2611"><!-- vertical box -->
+         <li class="MenuItemContainer clearfix colelem" id="u2630"><!-- horizontal box -->
+          <div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u2631"><!-- horizontal box -->
+           <div class="MenuItemLabel clearfix grpelem" id="u2633-4"><!-- content -->
+            <p>IR sensor pair</p>
+           </div>
+          </div>
+         </li>
+         <li class="MenuItemContainer clearfix colelem" id="u2658"><!-- horizontal box -->
+          <div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u2659"><!-- horizontal box -->
+           <div class="MenuItemLabel clearfix grpelem" id="u2662-4"><!-- content -->
+            <p>RF module</p>
+           </div>
+          </div>
+         </li>
+         <li class="MenuItemContainer clearfix colelem" id="u2651"><!-- horizontal box -->
+          <div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u2652"><!-- horizontal box -->
+           <div class="MenuItemLabel clearfix grpelem" id="u2655-4"><!-- content -->
+            <p>dtmf module</p>
+           </div>
+          </div>
+         </li>
+        </ul>
+       </div>
+      </li>
+     </ul>
+     <div class="clearfix grpelem" id="pu2785-4"><!-- column -->
+      <div class="clearfix colelem" id="u2785-4"><!-- content -->
+       <p>PIC easy kit</p>
+      </div>
+      <div class="clip_frame colelem" id="u2786"><!-- image -->
+       <img class="block" id="u2786_img" src="images/embedded-course-microcontroller-kit.jpg" alt="" width="343" height="241"/>
+      </div>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u2784-23"><!-- content -->
+     <p id="u2784-3">&nbsp;&nbsp;&nbsp;&nbsp; <span id="u2784-2">Build your own projects with pic16f877a micro controller using this full featured training kit. the kit has the provision for ICSP programming. also have the features like matrix key board , 7 segment display, ports for lcd display, rs232, i2c etc</span></p>
+     <p id="u2784-4">&nbsp;</p>
+     <p id="u2784-6">features</p>
+     <p id="u2784-9">*&nbsp; <span id="u2784-8">ICSP connector</span></p>
+     <p id="u2784-11"><span id="u2784-10">*&nbsp; LCD connector</span></p>
+     <p id="u2784-13"><span id="u2784-12">*&nbsp; DIP switches</span></p>
+     <p id="u2784-15"><span id="u2784-14">*&nbsp; 7 segment display</span></p>
+     <p id="u2784-17"><span id="u2784-16">*&nbsp; DB9 connector</span></p>
+     <p id="u2784-19"><span id="u2784-18">*&nbsp; Matrix keypad</span></p>
+     <p id="u2784-21"><span id="u2784-20">*&nbsp; real time clock ds1307</span></p>
+    </div>
+    <div class="clearfix colelem" id="u3921-3"><!-- content -->
+     <p>&nbsp;</p>
+    </div>
+    <div class="clearfix colelem" id="u3922-4"><!-- content -->
+     <p>89v51 kit</p>
+    </div>
+    <div class="clip_frame colelem" id="u3930"><!-- image -->
+     <img class="block" id="u3930_img" src="images/8051.gif" alt="" width="473" height="316"/>
+    </div>
+    <div class="clearfix colelem" id="u3923-29"><!-- content -->
+     <p id="u3923-2">&nbsp;&nbsp;&nbsp;&nbsp; The kit is based on philips 89v51rd2 microcontroller.&nbsp; Kit contains the boot&#45;loader which facilitates the&nbsp; user to flash the&nbsp; chip simply by using rs232 interface. The kit also includes matrix keyboard, 7segment displays, lcd display connector, gpio pins etc.</p>
+     <p id="u3923-3">&nbsp;</p>
+     <p id="u3923-5">features</p>
+     <p id="u3923-7">* No need of IC programmer</p>
+     <p id="u3923-9">* 7segment display</p>
+     <p id="u3923-11">* Matrix keypad</p>
+     <p id="u3923-13">* LCD interface</p>
+     <p id="u3923-15">* Dip switches</p>
+     <p id="u3923-17">* EEPROM 24c64</p>
+     <p id="u3923-19">*RTC ds1307</p>
+     <p id="u3923-21">* DB9 connector</p>
+     <p id="u3923-23">* USB connector for power supply</p>
+     <p id="u3923-25">* DPST relay</p>
+     <p id="u3923-27">* Analog to digital converter ADC0804</p>
+    </div>
+    <div class="verticalspacer"></div>
    </div>
-   <div class="verticalspacer"></div>
-   <ul class="MenuBar clearfix grpelem" id="menuu1272"><!-- horizontal box -->
-    <li class="MenuItemContainer clearfix grpelem" id="u1301"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1302"><!-- horizontal box -->
-      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1303-4"><!-- content -->
-       <p>Home</p>
-      </div>
-     </div>
-    </li>
-    <li class="MenuItemContainer clearfix grpelem" id="u1280"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1281" href="home.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1282-4"><!-- content --><p>services</p></div></a>
-    </li>
-    <li class="MenuItemContainer clearfix grpelem" id="u1287"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1288"><!-- horizontal box -->
-      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1290-4"><!-- content -->
-       <p>support</p>
-      </div>
-     </div>
-    </li>
-    <li class="MenuItemContainer clearfix grpelem" id="u1294"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1295"><!-- horizontal box -->
-      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1296-4"><!-- content -->
-       <p>promotions</p>
-      </div>
-     </div>
-    </li>
-    <li class="MenuItemContainer clearfix grpelem" id="u1273"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u1274"><!-- horizontal box -->
-      <div class="MenuItemLabel NoWrap clearfix grpelem" id="u1275-4"><!-- content -->
-       <p>contact</p>
-      </div>
-     </div>
-    </li>
-   </ul>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="images/u3128-r-full.png" alt=""/>
+   <img class="preload" src="images/u3128-m-full.png" alt=""/>
+   <img class="preload" src="images/u3149-r-full.png" alt=""/>
+   <img class="preload" src="images/u3149-m-full.png" alt=""/>
+   <img class="preload" src="images/u3411-r-full.png" alt=""/>
+   <img class="preload" src="images/u3411-a-full.png" alt=""/>
+   <img class="preload" src="images/u3163-r-full.png" alt=""/>
+   <img class="preload" src="images/u3163-m-full.png" alt=""/>
+   <img class="preload" src="images/u3482-r-full.png" alt=""/>
+   <img class="preload" src="images/u3482-a-full.png" alt=""/>
+   <img class="preload" src="images/u3154-r-full.png" alt=""/>
+   <img class="preload" src="images/u3154-m-full.png" alt=""/>
+   <img class="preload" src="images/u2596-r-full.png" alt=""/>
+   <img class="preload" src="images/u2596-m-full.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
