--- a/videos.html
+++ b/videos.html
@@ -7,28 +7,116 @@
   <title>Videos</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?417434784"/>
-  <link rel="stylesheet" type="text/css" href="css/videos.css?367434866" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_d-master.css?4059569944"/>
+  <link rel="stylesheet" type="text/css" href="css/videos.css?4133813715" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
+var __adobewebfontsappname__ = "muse";
 </script>
-    <!--custom head HTML-->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-51787775-1', 'adinovus.com');
-  ga('send', 'pageview');
-
+  <!-- JS includes -->
+  <script type="text/javascript">
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/inconsolata:n5:all;pt-mono:n4:all.js" type="text/javascript">\x3C/script>');
 </script>
-
- </head>
+   </head>
  <body>
 
   <div class="clearfix" id="page"><!-- column -->
-   <div class="verticalspacer"></div>
+   <div class="position_content" id="page_position_content">
+    <div class="clearfix colelem" id="pu3829"><!-- group -->
+     <div class="grpelem" id="u3829"><!-- simple frame --></div>
+     <div class="grpelem" id="u3830"><!-- group -->
+      <div class="_u3830 f3s_top clearfix" id="_u3830-f3s_top">
+       <div class="clip_frame grpelem" id="u3831"><!-- image -->
+        <img class="block" id="u3831_img" src="images/logo%20final.png" alt="" width="96" height="72"/>
+       </div>
+       <ul class="MenuBar clearfix grpelem" id="menuu3835"><!-- horizontal box -->
+        <li class="MenuItemContainer clearfix grpelem" id="u3877"><!-- vertical box -->
+         <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3878"><!-- group -->
+          <a class="nonblock nontext grpelem" id="u3878" href="home.html"><!-- horizontal box --><div class="_u3878 f3s_top clearfix" id="_u3878-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3879-4"><!-- content --><p>Home</p></div></div></a>
+         </div>
+        </li>
+        <li class="MenuItemContainer clearfix grpelem" id="u3891"><!-- vertical box -->
+         <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3892"><!-- group -->
+          <a class="nonblock nontext grpelem" id="u3892" href="home.html#whatwedo"><!-- horizontal box --><div class="_u3892 f3s_top clearfix" id="_u3892-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3893-4"><!-- content --><p>Services</p></div></div></a>
+         </div>
+         <div class="SubMenu  MenuLevel1 clearfix" id="u3896"><!-- vertical box -->
+          <ul class="SubMenuView clearfix colelem" id="u3897"><!-- vertical box -->
+           <li class="MenuItemContainer clearfix colelem" id="u3905"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3906"><!-- group -->
+             <a class="nonblock nontext shadow grpelem" id="u3906" href="projects.html"><!-- horizontal box --><div class="_u3906 f3s_top clearfix" id="_u3906-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3908-4"><!-- content --><p>Embedded Projects</p></div></div></a>
+            </div>
+           </li>
+           <li class="MenuItemContainer clearfix colelem" id="u3898"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3899"><!-- group -->
+             <a class="nonblock nontext shadow grpelem" id="u3899" href="diy-kits.html"><!-- horizontal box --><div class="_u3899 f3s_top clearfix" id="_u3899-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3901-4"><!-- content --><p>Do It Yourself Kits</p></div></div></a>
+            </div>
+           </li>
+           <li class="MenuItemContainer clearfix colelem" id="u3912"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3913"><!-- group -->
+             <a class="nonblock nontext shadow grpelem" id="u3913" href="apps.html"><!-- horizontal box --><div class="_u3913 f3s_top clearfix" id="_u3913-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3915-4"><!-- content --><p>Apps</p></div></div></a>
+            </div>
+           </li>
+          </ul>
+         </div>
+        </li>
+        <li class="MenuItemContainer clearfix grpelem" id="u3849"><!-- vertical box -->
+         <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3873"><!-- group -->
+          <a class="nonblock nontext grpelem" id="u3873" href="home.html#support"><!-- horizontal box --><div class="_u3873 f3s_top clearfix" id="_u3873-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3875-4"><!-- content --><p>Support</p></div></div></a>
+         </div>
+         <div class="SubMenu  MenuLevel1 clearfix" id="u3850"><!-- vertical box -->
+          <ul class="SubMenuView clearfix colelem" id="u3851"><!-- vertical box -->
+           <li class="MenuItemContainer clearfix colelem" id="u3866"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="pu3869"><!-- group -->
+             <a class="nonblock nontext grpelem" id="u3869" href="videos.html"><!-- horizontal box --><div class="_u3869 f3s_top clearfix" id="_u3869-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3871-4"><!-- content --><p>Videos</p></div></div></a>
+            </div>
+           </li>
+           <li class="MenuItemContainer clearfix colelem" id="u3859"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3862"><!-- group -->
+             <a class="nonblock nontext grpelem" id="u3862" href="training.html"><!-- horizontal box --><div class="_u3862 f3s_top clearfix" id="_u3862-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3863-4"><!-- content --><p>Training</p></div></div></a>
+            </div>
+           </li>
+           <li class="MenuItemContainer clearfix colelem" id="u3852"><!-- horizontal box -->
+            <div class="sbg MenuItem MenuItemWithSubMenu clearfix grpelem" id="pu3853"><!-- group -->
+             <a class="nonblock nontext grpelem" id="u3853" href="docs.html"><!-- horizontal box --><div class="_u3853 f3s_top clearfix" id="_u3853-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3854-4"><!-- content --><p>Docs</p></div></div></a>
+            </div>
+           </li>
+          </ul>
+         </div>
+        </li>
+        <li class="MenuItemContainer clearfix grpelem" id="u3884"><!-- vertical box -->
+         <div class="sbg MenuItem MenuItemWithSubMenu clearfix colelem" id="pu3885"><!-- group -->
+          <a class="nonblock nontext grpelem" id="u3885" href="home.html#contact"><!-- horizontal box --><div class="_u3885 f3s_top clearfix" id="_u3885-f3s_top"><div class="MenuItemLabel NoWrap clearfix grpelem" id="u3888-4"><!-- content --><p>Contact Us</p></div></div></a>
+         </div>
+        </li>
+       </ul>
+      </div>
+     </div>
+     <div class="clip_frame grpelem" id="u3833"><!-- image -->
+      <img class="block" id="u3833_img" src="images/name%20blue.png" alt="" width="320" height="88"/>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u2900-4"><!-- content -->
+     <p>Demonstration videos</p>
+    </div>
+    <a class="nonblock nontext shadow clip_frame colelem" id="u2894" href="portable-lift.html"><!-- image --><img class="block" id="u2894_img" src="images/screenshot%202014-06-16%20235040.jpg" alt="" width="218" height="121"/></a>
+    <a class="nonblock nontext clearfix colelem" id="u2899-4" href="portable-lift.html"><!-- content --><p>Automatic multi tier car parking system demo</p></a>
+    <div class="verticalspacer"></div>
+   </div>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="images/u3128-r-full.png" alt=""/>
+   <img class="preload" src="images/u3128-m-full.png" alt=""/>
+   <img class="preload" src="images/u3149-r-full.png" alt=""/>
+   <img class="preload" src="images/u3149-m-full.png" alt=""/>
+   <img class="preload" src="images/u3411-r-full.png" alt=""/>
+   <img class="preload" src="images/u3411-a-full.png" alt=""/>
+   <img class="preload" src="images/u3163-r-full.png" alt=""/>
+   <img class="preload" src="images/u3163-m-full.png" alt=""/>
+   <img class="preload" src="images/u3482-r-full.png" alt=""/>
+   <img class="preload" src="images/u3482-a-full.png" alt=""/>
+   <img class="preload" src="images/u3154-r-full.png" alt=""/>
+   <img class="preload" src="images/u3154-m-full.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -38,12 +126,14 @@
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script src="scripts/museutils.js?3865766194" type="text/javascript"></script>
+  <script src="scripts/jquery.musemenu.js?3788803530" type="text/javascript"></script>
   <script src="scripts/jquery.watch.js?4068933136" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    $(document).ready(function() { try {
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.initWidget('.MenuBar', function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
